# Devops-f_Brain2

./: docker-compose.yml
client/vite-project/: package-lock.json
monitoring/: prometheus.yml
server/: pyproject.toml
server/backend/: settings.py
